# seamlesssurfmap

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: FindMOSEK.cmake
data/bumpy-round-cube/: AtoB.txt  BtoA.txt  landmarks.txt
data/vase/: AtoB.txt  BtoA.txt  landmarks.txt
include/: cocut.h  common.h  gmap.h  handlecut.h  lift.h  mosek_util.h  refine.h  transformation.h  untangle.h  util.h
src/: app_handlecut.cpp  app_landmarker.cpp  app_reflector.cpp  app_seamlesssurfmap.cpp  app_untangle.cpp  app_uvprojector.cpp  cocut.cpp  gmap.cpp  handlecut.cpp  lift.cpp  refine.cpp  transformation.cpp  untangle.cpp  util.cpp  version.cpp.in
test/: cocut.cpp  conformal.cpp  cut.cpp  gflatten.cpp  gmap.cpp  handlecut.cpp  isometric.cpp  lift.cpp  refine.cpp  tutte.cpp  util.cpp
